<resources>
    <string name="app_name">Worship Bible</string>
    <string name="txt_finish_yes">"Finish"</string>
    <string name="txt_finish_no">"Cancel"</string>
    <string name="txt_finish_ment">"Are you sure you want to quit?"</string>
    <string name="main_txt1">"'Pressing' the Back button will exit once more."</string>
    <string name="txt_after_ad">"After Advertising Finish! We apologize for any inconvenience!"</string>
    <string name="permission_ment">"We will notify you that the necessary permissions are required to use this service."</string>
    <string name="permission_cancel">"If you refuse, there is a limit to the use of the service."</string>
    <string name="sub1_txt1">No pages.</string>
    <string name="sub1_txt2">Please select.</string>
    <string name="sub1_txt3">TTS Failed to initialize!</string>
    <string name="sub1_txt4">Please try again after installing TTS Hangul.</string>
    <string name="sub1_txt5">Prayer note added.</string>
    <string name="sub1_txt6">Data has already been added.</string>
    <string name="search_activity_txt1">Please enter a search term</string>
    <string name="search_activity_txt2">Search phrases notes</string>
    <string name="bible_mylist_txt1">Prayer Notes</string>
    <string name="bible_mylist_txt2">Deleted.</string>
    <string name="bible_mylist_txt3">Share</string>
    <string name="bible_mylist_txt4">View</string>
    <string name="bible_mylist_txt5">Edit</string>
    <string name="bible_mylist_txt6">Delete</string>
    <string name="bible_mylist_txt7">Close</string>
    <string name="bible_noteedit_txt1">Prayer title.</string>
    <string name="bible_noteedit_txt2">Prayer content.</string>
    <string name="bible_noteedit_txt3">Prayer Notes added.</string>
    <string name="bible_noteedit_txt4">Prayer Notes edit.</string>
    <string name="txt_sharedpreferences_string">"com.good.worshipbible.nos_sub.preferences"</string>
   	<string name="txt_sharedpreferences_gidomun_string">"com.good.worshipbible.nos_gidomun.preferences"</string>
   	<string name="txt_sharedpreferences_ccm_channel_string">"com.good.worshipbible.nos_ccm_channel.preferences"</string>
    <string name="txt_menu_bottom1">Zoom(-)</string>
    <string name="txt_menu_bottom2">Zoom(+)</string>
    <string name="txt_menu_bottom3">Scroll</string>
    <string name="txt_menu_bottom4">Pre</string>
    <string name="txt_menu_bottom5">Next</string>
    <string name="txt_menu_bottom6">Search</string>
    <string name="txt_menu_bottom7">""</string>
    <string name="txt_menu_bottom8">Setting</string>
    <string name="txt_menu_top1">Old</string>
    <string name="txt_menu_top2">New</string>
    <string name="txt_menu_top3">Hymn</string>
    <string name="txt_menu_top4">Note</string>
    <string name="txt_menu_top5">Sermon</string>
    <string name="txt_menu_top6">CCM</string>
    <string name="txt_menu_top7">Prayer</string>
    <string name="txt_menu_top8">Worship</string>
    <string name="sub1_txt10">Stop</string>
    <string name="txt_sub_action1_1">Select all</string>
    <string name="txt_sub_action1_2">Deselect</string>
    <string name="txt_sub_action2">Note</string>
    <string name="txt_sub_action3_1">TTS</string>
    <string name="txt_sub_action3_2">Stop</string>
    <string name="txt_sub_action4">Share</string>
    <string name="txt_setting_alert_title">Setting</string>
    <string name="txt_setting_alert0">Select Bible1</string>
    <string name="txt_setting_alert1">Select Bible2</string>
    <string name="txt_setting_alert2">Audio Speed</string>
    <string name="txt_setting_alert3">Text Color</string>
    <string name="txt_setting_alert4">Review Rating</string>
    <string name="txt_setting_alert5">App Share</string>
    <string name="txt_bible_list_none">None</string>
    <string name="txt_bible_list1">개역개정판</string>
    <string name="txt_bible_list2">개역한글판</string>
    <string name="txt_bible_list3">KingJamesBible</string>
    <string name="txt_bible_list4">日本語 新改譯</string>
    <string name="txt_bible_list5">中文 K J V 上帝版繁體</string>
    <string name="txt_bible_list6">FrenchDarby</string>
    <string name="txt_bible_list7">GermanLuther</string>
    <string name="txt_bible_list8">Greek Bible</string>
    <string name="txt_bible_list9">IndonesianBaru</string>
    <string name="txt_bible_list10">Portugal</string>
    <string name="txt_bible_list11">RussianSynodal</string>
    <string name="txt_bible_list12">ALBANIAN</string>
    <string name="txt_bible_list13">ASV</string>
    <string name="txt_bible_list14">Arabic VanDyke Smith</string>
    <string name="txt_bible_list15">바른성경</string>
    <string name="txt_bible_list16">中文 和合 本繁體</string>
    <string name="txt_bible_list17">中文 和合 本简体</string>
    <string name="txt_bible_list18">中文 新译 本繁體</string>
    <string name="txt_bible_list19">中文 K J V 神版简体</string>
    <string name="txt_bible_list20">中文 K J V 上帝版简体</string>
    <string name="txt_bible_list21">中文 K J V 神版繁體</string>
    <string name="txt_bible_list22">Hebrew Stuttgartensia</string>
    <string name="txt_bible_list23">Hebrew 1976 Modern</string>
    <string name="txt_bible_list24">Hebrew WLC</string>
    <string name="txt_bible_list25">IndianHindi</string>
    <string name="txt_bible_list26">Indian Tamil</string>
    <string name="txt_bible_list27">日本語 口語譯</string>
    <string name="txt_bible_list28">ReinaValera1960</string>
    <string name="txt_bible_list29">Tagalog</string>
    <string name="txt_bible_list30">Turkish</string>
    <string name="txt_bible_list31">WEB</string>
    <string name="txt_audiospeed_after">"After stopping audio please choose"</string>
    <string name="txt_audiospeed_list1">"Normal"</string>
    <string name="txt_audiospeed_list2">"Fast"</string>
    <string name="txt_textcolor_list1">"Black"</string>
    <string name="txt_textcolor_list2">"Purple"</string>
    <string name="txt_textcolor_list3">"Blue"</string>
    <string name="txt_textcolor_list4">"Cyan"</string>
    <string name="txt_textcolor_list5">"Gray(DK)"</string>
    <string name="txt_textcolor_list6">"Gray"</string>
    <string name="txt_textcolor_list7">"Green"</string>
    <string name="txt_textcolor_list8">"Gary(LT)"</string>
    <string name="txt_textcolor_list9">"Magenta"</string>
    <string name="txt_textcolor_list10">"Red"</string>
    <string name="txt_textcolor_list11">"Yellow"</string>
    <string name="txt_textcolor_list12">"Navy"</string>
	<string name="txt_bt_kwon1">"Old Testament"</string>
	<string name="txt_bt_kwon2">"New Testament"</string>
    <string name="txt_kwon_kbb1">"Genesis"</string>
	<string name="txt_kwon_kbb2">"Exodus"</string>
	<string name="txt_kwon_kbb3">"Leviticus"</string>
	<string name="txt_kwon_kbb4">"Numbers"</string>
	<string name="txt_kwon_kbb5">"Deuteronomy"</string>
	<string name="txt_kwon_kbb6">"Joshua"</string>
	<string name="txt_kwon_kbb7">"Judges"</string>
	<string name="txt_kwon_kbb8">"Ruth"</string>
	<string name="txt_kwon_kbb9">"Samuel(1)"</string>
	<string name="txt_kwon_kbb10">"Samuel(2)"</string>
	<string name="txt_kwon_kbb11">"Kings(1)"</string>
	<string name="txt_kwon_kbb12">"Kings(2)"</string>
	<string name="txt_kwon_kbb13">"Chronicles(1)"</string>
	<string name="txt_kwon_kbb14">"Chronicles(2)"</string>
	<string name="txt_kwon_kbb15">"Ezra"</string>
	<string name="txt_kwon_kbb16">"Nehemiah"</string>
	<string name="txt_kwon_kbb17">"Esther"</string>
	<string name="txt_kwon_kbb18">"Job"</string>
	<string name="txt_kwon_kbb19">"Psalms"</string>
	<string name="txt_kwon_kbb20">"Proverbs"</string>
	<string name="txt_kwon_kbb21">"Ecclesiastes"</string>
	<string name="txt_kwon_kbb22">"Song of Songs"</string>
	<string name="txt_kwon_kbb23">"Isaiah"</string>
	<string name="txt_kwon_kbb24">"Jeremiah"</string>
	<string name="txt_kwon_kbb25">"Lamentations"</string>
	<string name="txt_kwon_kbb26">"Ezekiel"</string>
	<string name="txt_kwon_kbb27">"Daniel"</string>
	<string name="txt_kwon_kbb28">"Hosea"</string>
	<string name="txt_kwon_kbb29">"Joel"</string>
	<string name="txt_kwon_kbb30">"Amos"</string>
	<string name="txt_kwon_kbb31">"Obadiah"</string>
	<string name="txt_kwon_kbb32">"Jonah"</string>
	<string name="txt_kwon_kbb33">"Micah"</string>
	<string name="txt_kwon_kbb34">"Nahum"</string>
	<string name="txt_kwon_kbb35">"Habakkuk"</string>
	<string name="txt_kwon_kbb36">"Zephaniah"</string>
	<string name="txt_kwon_kbb37">"Haggai"</string>
	<string name="txt_kwon_kbb38">"Zechariah"</string>
	<string name="txt_kwon_kbb39">"Malachi"</string>
	<string name="txt_kwon_kbb40">"Matthew"</string>
	<string name="txt_kwon_kbb41">"Mark"</string>
	<string name="txt_kwon_kbb42">"Luke"</string>
	<string name="txt_kwon_kbb43">"John"</string>
	<string name="txt_kwon_kbb44">"Acts"</string>
	<string name="txt_kwon_kbb45">"Romans"</string>
	<string name="txt_kwon_kbb46">"Corinthians(1)"</string>
	<string name="txt_kwon_kbb47">"Corinthians(2)"</string>
	<string name="txt_kwon_kbb48">"Galatians"</string>
	<string name="txt_kwon_kbb49">"Ephesians"</string>
	<string name="txt_kwon_kbb50">"Philippians"</string>
	<string name="txt_kwon_kbb51">"Colossians"</string>
	<string name="txt_kwon_kbb52">"Thessalonians(1)"</string>
	<string name="txt_kwon_kbb53">"Thessalonians(2)"</string>
	<string name="txt_kwon_kbb54">"Timothy(1)"</string>
	<string name="txt_kwon_kbb55">"Timothy(2)"</string>
	<string name="txt_kwon_kbb56">"Titus"</string>
	<string name="txt_kwon_kbb57">"Philemon"</string>
	<string name="txt_kwon_kbb58">"Hebrews"</string>
	<string name="txt_kwon_kbb59">"James"</string>
	<string name="txt_kwon_kbb60">"Peter(1)"</string>
	<string name="txt_kwon_kbb61">"Peter(2)"</string>
	<string name="txt_kwon_kbb62">"John(1)"</string>
	<string name="txt_kwon_kbb63">"John(2)"</string>
	<string name="txt_kwon_kbb64">"John(3)"</string>
	<string name="txt_kwon_kbb65">"Jude"</string>
	<string name="txt_kwon_kbb66">"Revelation"</string>
	<string name="txt_gidomun_description00">"주기도문"</string>
	<string name="txt_gidomun_description01">"주기도문 새번역"</string>
	<string name="txt_gidomun_description02">"The Lords Prayer"</string>
	<string name="txt_gidomun_description03">"사도신경 새번역"</string>
	<string name="txt_gidomun_description04">"사도신경"</string>
	<string name="txt_gidomun_description05">"The Apostles Creed"</string>
	<string name="txt_gidomun_description06">"십계명"</string>
	<string name="txt_gidomun_description07">"교독문"</string>
	<string name="txt_gidomun_description08">"심방사전"</string>
	<string name="txt_gidomun_description09">"교독문(구)"</string>
	<string name="txt_kyodok_description00">"전체보기"</string>
	<string name="txt_kyodok_description01">"1.시편1편"</string>
	<string name="txt_kyodok_description02">"2.시편2편"</string>
	<string name="txt_kyodok_description03">"3.시편4편"</string>
	<string name="txt_kyodok_description04">"4.시편5편"</string>
	<string name="txt_kyodok_description05">"5.시편8편"</string>
	<string name="txt_kyodok_description06">"6.시편10편"</string>
	<string name="txt_kyodok_description07">"7.시편13편"</string>
	<string name="txt_kyodok_description08">"8.시편14편"</string>
	<string name="txt_kyodok_description09">"9.시편15편"</string>
	<string name="txt_kyodok_description10">"10.시편16편"</string>
	<string name="txt_kyodok_description11">"11.시편17편"</string>
	<string name="txt_kyodok_description12">"12.시편19편"</string>
	<string name="txt_search_nodata2">"Tip.Setting-SelectBible1 based on\nThere is no data!"</string>
	<string name="txt_nodata">"There is no data"</string>
	<string name="txt_bt_write">"Write"</string>
	<string name="sub5_txt37">"Favorites"</string>
	<string name="sub5_txt38">"Download"</string>
	<string name="sub5_txt39">"Continues"</string>
    <string name="sub6_txt1">"There is no data"</string>
    <string name="sub6_txt2">"Select all"</string>
    <string name="sub6_txt3">"Audio Start"</string>
    <string name="sub6_txt4">"Video Start"</string>
    <string name="sub6_txt5">"Favorites"</string>
    <string name="sub6_txt23">"Favorite"</string>
    <string name="txt_search_hint">"Please enter your search query"</string>
</resources>