<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:background="@drawable/btn_top_bg" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <Button android:id="@+id/top_01" android:background="@drawable/top_btn_01" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top1" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_02" android:background="@drawable/top_btn_02" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top2" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_03" android:background="@drawable/top_btn_03" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top3" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_04" android:background="@drawable/top_btn_04" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top4" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_05" android:background="@drawable/top_btn_05" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top5" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_06" android:visibility="gone" android:background="@drawable/top_btn_06" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top6" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_07" android:background="@drawable/top_btn_07" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top7" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/top_08" android:visibility="gone" android:background="@drawable/top_btn_08" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_top8" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
</LinearLayout>
