<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:background="#e6e6e6" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <Button android:id="@+id/Bottom_01" android:background="@drawable/bottom_btn_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom1" android:textColor="#0000ff" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/Bottom_02" android:background="@drawable/bottom_btn_02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom2" android:textColor="#0000ff" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/Bottom_03" android:background="@drawable/bottom_btn_03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom3" android:textColor="#0000ff" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/Bottom_07" android:background="@drawable/bottom_btn_07" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom7" android:textColor="#0000ff" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
</LinearLayout>
