<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
    <LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:gravity="center"
			android:background="#e6e6e6">
         	<ImageButton 
	            android:id="@+id/bt_home"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dip"
	            android:background="@drawable/btn_bg_home"/>
			<EditText 
				android:id="@+id/edit_seacher"
				android:textSize="13dp"
				android:hint="@string/txt_search_hint"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:imeOptions="actionDone"
				android:paddingLeft="10dip"/>
			<ImageButton 
	            android:id="@+id/bt_search_result"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:background="@drawable/btn_bg_search"/>
		</LinearLayout>  
	<LinearLayout 
	    android:gravity="top"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <include 
            layout="@layout/menu_top" />
    </LinearLayout>
    
	<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_search"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="visible">
			<ListView
		        android:id="@+id/listview_search"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="visible">
	        <TextView
	            android:id="@+id/txt_search_nodata"
	            android:text="@string/txt_search_nodata2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="13sp"/>
         </LinearLayout>
	</RelativeLayout>
	
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone" >
        <Button
            android:id="@+id/bt_action1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_sub_action1_1"
            android:textSize="11dp"
            android:textColor="#000000"/>
        <Button
            android:id="@+id/bt_action2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_sub_action2"
            android:textSize="11dp"
            android:textColor="#000000"/>
        <Button
            android:visibility="gone"
            android:id="@+id/bt_action3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_sub_action3_1"
            android:textSize="11dp"
            android:textColor="#000000"/>
        <Button
            android:id="@+id/bt_action4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_sub_action4"
            android:textSize="11dp"
            android:textColor="#000000"/>
	</LinearLayout>
	
	<RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
    </RelativeLayout>
		    <RelativeLayout
		          android:visibility="gone"
		          android:id="@+id/admob_native"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_gravity="center_horizontal"
		          android:gravity="center"> 
		    </RelativeLayout>    
	<LinearLayout
	    android:id="@+id/layout_bottom" 
	    android:gravity="bottom"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:visibility="gone">
        <include 
            layout="@layout/menu_bottom_searcher" />
    </LinearLayout>
</LinearLayout>
