<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:gravity="center"
			android:background="#f5f5f5">
			<Button
	             android:id="@+id/bt_ccm_favorite"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/sub6_txt23"
	             android:gravity="bottom|center"
	             android:textStyle="italic|bold"
	             android:textColor="#000000"
	             android:textSize="11sp"
	             android:background="@drawable/btn_bg_ccm_favorite"/>
			<TextView
			     android:id="@+id/txt_main_title"
                 android:textColor="#000000"
                 android:ellipsize="marquee" 
                 android:textStyle="bold"
                 android:layout_width="0dip" 
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:singleLine="true"
                 android:textSize="18sp"
                 android:gravity="center"/>
			<Button
			     android:visibility="invisible"
	             android:id="@+id/bt_empty"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/sub6_txt23"
	             android:gravity="bottom|center"
	             android:textStyle="italic|bold"
	             android:textColor="#000000"
	             android:textSize="11sp"
	             android:background="@drawable/btn_bg_ccm_favorite"/>
		</LinearLayout>
		<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_main"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="visible">
			<ListView
		        android:id="@+id/listview_main"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#cccccc"
		        android:dividerHeight="1dp"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="gone">
	        <TextView
	            android:id="@+id/txt_nodata"
	            android:text="@string/sub6_txt1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="13sp"/>
         </LinearLayout>
         <LinearLayout
                android:visibility="gone" 
                android:orientation="vertical"
                android:id="@+id/layout_progress" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_centerInParent="true" 
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
          <ProgressBar
                android:layout_gravity="center" 
                android:id="@android:id/progress"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                style="?android:progressBarStyle" />
          </LinearLayout>           
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone" >
        <Button
            android:id="@+id/bt_all_select"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub6_txt2"
            android:textSize="11dp"
            android:textColor="#000000"/>
        <Button
            android:id="@+id/bt_play_media"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub6_txt3"
            android:textSize="11dp"
            android:textColor="#000000"/>
        <Button
            android:id="@+id/bt_play_video"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub6_txt4"
            android:textSize="11dp"
            android:textColor="#000000"/>
         <Button
            android:visibility="gone"
            android:id="@+id/bt_favorite"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub6_txt5"
            android:textSize="11dp"
            android:textColor="#000000"/>
	</LinearLayout>
	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:gravity="center">
         	<ImageButton 
	            android:id="@+id/bt_home"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dip"
	            android:background="@drawable/btn_bg_home"/>
			<EditText 
				android:id="@+id/edit_searcher"
				android:textSize="13dp"
				android:hint="@string/txt_search_hint"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:imeOptions="actionDone"
				android:paddingLeft="10dip"/>
			<ImageButton 
	            android:id="@+id/bt_search_result"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:background="@drawable/btn_bg_search"/>
		</LinearLayout>  
		    <RelativeLayout
		          android:visibility="gone"
		          android:id="@+id/admob_native"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_gravity="center_horizontal"
		          android:gravity="center"> 
		    </RelativeLayout>		
	<RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
    </RelativeLayout>
</LinearLayout>