<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
    <LinearLayout 
        android:id="@+id/bible_navigator_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#e6e6e6">
        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bible_mylist_txt1"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic|bold"/>
        <Button
           android:id="@+id/bt_write"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/txt_bt_write"
           android:gravity="bottom|center"
           android:textStyle="italic|bold"
           android:textColor="#0000ff"
           android:textSize="11sp"
           android:background="@drawable/top_btn_04"/>
    </LinearLayout>
    <LinearLayout 
	    android:gravity="top"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content">
        <include 
            layout="@layout/menu_top" />
    </LinearLayout>
    
	<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_mylist"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="visible">
			<ListView
		        android:id="@+id/listview_mylist"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="gone">
	        <TextView
	            android:id="@+id/txt_nodata"
	            android:text="@string/txt_nodata"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="13sp"/>
         </LinearLayout>
	</RelativeLayout>
		    <RelativeLayout
		          android:visibility="gone"
		          android:id="@+id/admob_native"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_gravity="center_horizontal"
		          android:gravity="center"> 
		    </RelativeLayout>	
	<RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
    </RelativeLayout>
</LinearLayout>
